CMake: Do not create file items with unclean path

Fixes a crash later in the pipe in backgroundparser.cpp:

Original backtrace (trimmed):
5 0x00007ffff5aa41a8 in qt_assert (assertion=0x7ffff160961b
"isValidURL(url)", file=0x7ffff1609758
"/home/krf/devel/src/kdevplatform/language/backgroundparser/backgroundparser.cpp",
line=524)
6 0x00007ffff14c9ac4 in KDevelop::BackgroundParser::addDocument
(this=0xb93700, url=...,
features=KDevelop::TopDUContext::VisibleDeclarationsAndContexts,
priority=100000, notifyWhenReady=0x4c92fb0, flags=...) at
/home/krf/devel/src/kdevplatform/language/backgroundparser/backgroundparser.cpp:524
7 0x00007ffff14d95d2 in KDevelop::ParseProjectJob::start
(this=0x4c92fb0) at
/home/krf/devel/src/kdevplatform/language/backgroundparser/parseprojectjob.cpp:90
8 0x00007ffff744a84d in KDevelop::RunController::registerJob
(this=0xb936d0, job=0x4c92fb0) at
/home/krf/devel/src/kdevplatform/shell/runcontroller.cpp:566 #9
0x00007ffff7428122 in
KDevelop::ProjectController::projectImportingFinished (this=<optimized
out>, project=0x301d7a0) at
/home/krf/devel/src/kdevplatform/shell/projectcontroller.cpp:779 #10
0x00007ffff743089c in KDevelop::ProjectPrivate::importDone
(this=0x4126530, job=<optimized out>) at
/home/krf/devel/src/kdevplatform/shell/project.cpp:257 #11
0x00007ffff7430291 in KDevelop::Project::qt_static_metacall
(_o=0x301d7a0, _c=<optimized out>, _id=<optimized out>,
_a=0x7fffffffc9b0) at
/home/krf/devel/build/kdevplatform/shell/moc_project.cpp:94

BUG: 310524